fix slot name wrap

--- a/src/components/current_game/CurrentGame.scss
+++ b/src/components/current_game/CurrentGame.scss
@@ -40,9 +40,12 @@
 
     &__basics{
 
+        max-width: 192px;
+
         &__game-name{
             font-size: 20px;
             font-weight: bold;
+            overflow-wrap: break-word;
         }
 
         &__game-provider{
